# embedded_doorbell_project

./: .gitignore  CMakeLists.txt  partitions.csv
main/: CMakeLists.txt  doorbell_button.c  doorbell_button.h  doorbell_camera.c  doorbell_camera.h  doorbell_codec.c  doorbell_codec.h  doorbell_config.h  doorbell_lcd_st7789.c  doorbell_lcd_st7789.h  doorbell_led.c  doorbell_led.h  doorbell_mqtt.c  doorbell_mqtt.h  doorbell_ota.c  doorbell_ota.h  doorbell_wifi.c  doorbell_wifi.h  doorbell_wsclient.c  doorbell_wsclient.h  idf_component.yml  main.c  output.pcm
