idf_component_register(SRCS "main.c"
                            "doorbell_codec.c" 
                            "doorbell_led.c" 
                            "doorbell_button.c"
                            "doorbell_wifi.c"
                            "doorbell_mqtt.c"
                            "doorbell_camera.c"
                            "doorbell_wsclient.c"
                            "doorbell_lcd_st7789.c"
                            "doorbell_ota.c"
                    INCLUDE_DIRS "." 
                    EMBED_FILES "output.pcm")